--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: #fff;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -30,6 +29,12 @@ button {
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
+  cursor: pointer;
+  color: #fff;
+}
+
+button:hover {
+  background-color: #ffffff50;
 }
 
 nav {
@@ -38,16 +43,27 @@ nav {
   margin: 10px;
 }
 
+nav p {
+  color: white;
+  font-size: 0.8em;
+}
+
 .history {
   padding: 10px;
   margin: 10px;
   height: 100%;
+  color: #fff;
 }
 
 .history li {
   list-style-type: none;
-  padding: 15px 0;
+  padding: 15px;
   cursor: pointer;
+}
+
+.history li:hover {
+  background-color: #ffffff50;
+  border-radius: 10px;
 }
 
 /* MAIN */
@@ -60,6 +76,9 @@ nav {
   justify-content: space-around;
   align-items: center;
   text-align: center;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  color: #fff;
 }
 
 .bottomSection {
@@ -71,6 +90,7 @@ nav {
 }
 
 .info {
+  padding: 1em;
   color: #ffffff50;
 }
 
@@ -88,6 +108,7 @@ input {
   padding: 12px 15px;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px;
+  color: white;
 }
 
 input:focus {
@@ -103,26 +124,68 @@ input:focus {
   color: #ffffff40;
 }
 
+#submit:hover {
+  color: #ffffff90;
+}
+
 .feed {
-  overflow: scroll;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
   width: 60%;
-  padding: 0;
+  padding: 10px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .feed li {
   display: flex;
-  background-color: #ffa9bd;
+  border-radius: 10px;
   width: 100%;
   padding: 20px;
   margin: 20px 0px;
 }
 
-.feed p {
-  color: #ffffff80;
-  font-size: 1.2em;
+.userMessage {
+  background-color: #d1e7dd; /* Light green for user messages */
+  color: #0f5132;
+  padding: 10px;
+  margin: 5px 0;
+  max-width: 60%;
+  border-radius: 10px;
+  align-self: flex-end; /* Aligns user messages to the right */
+  text-align: right;
+}
+
+.aiMessage {
+  background-color: #f8d7da; /* Light red for AI messages */
+  color: #842029;
+  padding: 10px;
+  margin: 5px 0;
+  max-width: 60%;
+  border-radius: 10px;
+  align-self: flex-start; /* Aligns AI messages to the left */
   text-align: left;
 }
 
-.feed p.role {
-  min-width: 100px;
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
